--- a/app/src/main/res/layout/recycler_view_fragment.xml
+++ b/app/src/main/res/layout/recycler_view_fragment.xml
@@ -7,4 +7,10 @@
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="1dp"
+            tools:layout_editor_absoluteX="1dp"
+            tools:listitem="@layout/crypto_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
