--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,10 @@
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fragmentContainerView"
+            tools:layout_editor_absoluteY="82dp"
+            tools:layout_editor_absoluteX="37dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
