--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -4,7 +4,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        android:background="#dfe5f3">
+        android:background="#dfe5f3"
+        >
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:text="CCY1/CCY2"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_size"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:textAllCaps="true" />
@@ -40,15 +41,18 @@
                         android:layout_width="169dp"
                         android:layout_height="wrap_content"
                         android:text="Coin price:"
-                        android:textSize="16sp"
-                        android:textAlignment="textEnd" />
+                        android:textSize="@dimen/little_text_size"
+                        android:textColor="@android:color/black"
+                        android:textAlignment="textEnd"
+                        />
 
                 <TextView
                         android:id="@+id/coinPrice"
                         android:layout_width="203dp"
                         android:layout_height="wrap_content"
                         android:text="00.00"
-                        android:textSize="16sp"
+                        android:textSize="@dimen/little_text_size"
+                        android:textColor="@android:color/black"
                         android:layout_marginStart="8dp"
                         android:textAlignment="center" />
             </TableRow>
@@ -59,7 +63,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Min 24 hours:"
-                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/little_text_size"
                         android:textAlignment="textEnd" />
 
                 <TextView
@@ -67,7 +72,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="00.00"
-                        android:textSize="16sp"
+                        android:textSize="@dimen/little_text_size"
                         android:layout_marginStart="8dp"
                         android:textColor="@android:color/holo_red_light"
                         android:textAlignment="center" />
@@ -79,7 +84,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Max 24 hours:"
-                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/little_text_size"
                         android:textAlignment="textEnd" />
 
                 <TextView
@@ -87,7 +93,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="00.00"
-                        android:textSize="16sp"
+                        android:textSize="@dimen/little_text_size"
                         android:layout_marginStart="8dp"
                         android:textColor="@android:color/holo_green_light"
                         android:textAlignment="center" />
@@ -99,15 +105,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Last update:"
-                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/little_text_size"
                         android:textAlignment="textEnd" />
 
                 <TextView
                         android:id="@+id/lastUpdate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="00:00:00"
-                        android:textSize="16sp"
+                        android:textSize="@dimen/little_text_size"
                         android:layout_marginStart="8dp"
                         android:textAlignment="center" />
             </TableRow>
