fragments almost done, stable version

--- a/app/src/main/res/layout/recycler_view_fragment.xml
+++ b/app/src/main/res/layout/recycler_view_fragment.xml
@@ -12,5 +12,6 @@
             android:layout_height="match_parent"
             tools:layout_editor_absoluteY="1dp"
             tools:layout_editor_absoluteX="1dp"
-            tools:listitem="@layout/crypto_item" />
+            tools:listitem="@layout/crypto_item"
+            android:id="@+id/rvCryptoList" />
 </androidx.constraintlayout.widget.ConstraintLayout>
