--- a/app/src/main/res/layout/recycler_view_fragment.xml
+++ b/app/src/main/res/layout/recycler_view_fragment.xml
@@ -5,7 +5,9 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.MainActivity">
+        tools:context=".presentation.MainActivity"
+        android:background="@color/background"
+        >
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
