--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        android:background="#dfe5f3"
+        android:background="@color/background"
         >
 
     <LinearLayout
