--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,6 +11,7 @@
             android:layout_width="0dp"
             app:layout_constraintWidth_percent="0.5"
             android:layout_height="match_parent"
+            app:navGraph="@navigation/navigation_graph"
             android:id="@+id/fragment0"
             android:name="com.example.cryptocurrencyviewer.presentation.RVFragment"
             app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +22,7 @@
             android:layout_width="0dp"
             app:layout_constraintWidth_percent="0.5"
             android:layout_height="match_parent"
+            app:navGraph="@navigation/navigation_graph"
             android:id="@+id/fragment1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
