--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,26 +6,25 @@
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity">
 
-    <!-- Left half for RVFragment -->
     <androidx.fragment.app.FragmentContainerView
-            android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.5"
-            android:layout_height="match_parent"
-            app:navGraph="@navigation/navigation_graph"
             android:id="@+id/fragment0"
             android:name="com.example.cryptocurrencyviewer.presentation.RVFragment"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Right half for DetailsFragment (Initially empty) -->
-    <androidx.fragment.app.FragmentContainerView
             android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.5"
             android:layout_height="match_parent"
-            app:navGraph="@navigation/navigation_graph"
-            android:id="@+id/fragment1"
+            app:layout_constraintWidth_percent="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:navGraph="@navigation/navigation_graph"/>
+
+    <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:navGraph="@navigation/navigation_graph"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
