--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#0D0F0D</color>
-    <color name="card_color">#313DEB</color>
-    <color name="status_bar_color">#1C2187</color>
+    <color name="background">#E3F2FD</color>
+    <color name="card_color">#0096FF</color>
+    <color name="status_bar_color">#1976D2</color>
+
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#E3F2FD</color>
 </resources>
